syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.orange";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package br.com.orange;
import "google/protobuf/timestamp.proto";

// Melhor forma: cada servico um metodo

service PixService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}

  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}

  rpc consultaPorId (BuscaPorIdRequest) returns (BuscaPorIdResponse) {}

  rpc listaChaves (BuscaTodasChavesRequest) returns (BuscaTodasChavesResponse) {}

}

enum TipoDeChave {
  DESCONHECIDO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta{
  NENHUM_TIPO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

/*
Remove chave pix
request: Pix Id, idcliente, pedir nome, e cpf - checar se Ã© o msm idcliente e cpf

*/

message RemoveChavePixRequest{
  string clienteId = 1;
  string pixId = 2;
  string nome = 3;
  string cpf = 4;
}
message RemoveChavePixResponse {
  string mensagem = 1;
}


/*
  Busca chave por id
*/

message BuscaPorIdRequest {
  string clienteId = 1;
  string pixId = 2;
  string chave = 3;
}
message BuscaPorIdResponse {
  string clienteId = 1;
  string pixId = 2;
  string tipoDeChave = 3;
  string chave = 4;
  TipoDeConta tipoDeConta = 5;
  string nome = 6;
  string cpf = 7;
  string banco = 8;
  string agencia = 9;
  string numero = 10;
  string criadoEm = 11;

}

/*
Lista Chaves

*/


message BuscaTodasChavesRequest{
  string clienteId = 1;
}

message BuscaTodasChavesResponse{

  message ChavePix {
    string pixId = 1;
    TipoDeChave tipoDeChave = 2;
    string chave = 3;
    TipoDeConta tipoDeConta = 4;
    google.protobuf.Timestamp criadoEm = 5;
  }
  string clienteId = 1;
  repeated ChavePix chaves = 2;

}